<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~ * Created by Rakshit Saxena
  ~ * Copyright (c) 2021 . All rights reserved.
  ~ */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_vector_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_products"
        android:icon="@drawable/ic_vector_products"
        android:title="@string/title_products" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_vector_orders"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_sold_products"
        android:icon="@drawable/ic_vector_sold_products"
        android:title="@string/title_sold_products" />

</menu>